<resources>
    <string name="app_name">瞎看</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="nav_title_news">新闻</string>
    <string name="nav_title_meizi">妹子</string>
    <string name="network_not_available">网断掉啦！！！</string>
    <string name="network_error">网络异常：</string>
    <string name="no_data">数据为空</string>
    <string name="error">异常：</string>
    <string name="server_error">服务器异常</string>
    <string name="nav_title_duanzi">段子</string>
    <string name="quit_app_tip">再按一次退出应用</string>
    <string name="no_more_data">没有更多了...</string>
    <string name="tttv">TTTV</string>
    <string name="clear_cache">清理缓存</string>
    <string name="cache_cleared">缓存已清理：</string>
    <string name="nav_title_zhihu">知乎日报</string>
    <string name="nav_title_meiju">看剧</string>
</resources>
