<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/nav_news"
            android:title="@string/nav_title_news" />
        <item
            android:id="@+id/nav_duanzi"
            android:icon="@drawable/nav_duanzi"
            android:title="@string/nav_title_duanzi" />
        <item
            android:id="@+id/nav_tv"
            android:icon="@drawable/nav_tv"
            android:title="@string/tttv" />
        <item
            android:id="@+id/nav_zhihu"
            android:icon="@drawable/nav_zhihu"
            android:title="@string/nav_title_zhihu" />
        <item
            android:id="@+id/nav_meiju"
            android:icon="@drawable/nav_meiju"
            android:title="@string/nav_title_meiju" />
        <item
            android:id="@+id/nav_meizi"
            android:icon="@drawable/nav_meizi"
            android:title="@string/nav_title_meizi" />
    </group>
</menu>